Fixed spelling error. Added function to wrap around the image and captions in a <figure> element.

--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ blockquote a:hover{
 	color: #666;
 }
 	/*Image captions*/
-.wp-cation-text {
+.wp-caption-text {
 	position: relative;
 	font-size: .8em;
 	color: #666;
